# learn_microservices

fastapi-helloworld/: pyproject.toml
fastapi-helloworld/fastapi_helloworld/: main.py
fastapi-helloworld/tests/: test_main.py
project_1/: pyproject.toml
project_1/project_1/: main.py
project_1/tests/: test_project1.py
