[tool.poetry]
name = "fastapi-helloworld"
version = "0.1.0"
description = ""
authors = ["ChouhdryRizwan <muhammadrizwantahir23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
pytest = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
